--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">My First App</string>
     <string name="action_settings">Settings</string>
+    <string name="action_exit">Exit</string>
     <string name="edit_message">Enter your message</string>
     <string name="button_send">Send</string>
     <string name="title_activity_display_message">My Message</string>
